; ModuleID = '/home/carl/AnghaBench/fastsocket/kernel/drivers/pci/extr_slot.c_pci_slot_attr_show.c'
source_filename = "/home/carl/AnghaBench/fastsocket/kernel/drivers/pci/extr_slot.c_pci_slot_attr_show.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

%struct.kobject = type { i32 }
%struct.attribute = type { i32 }
%struct.pci_slot = type { i32 }
%struct.pci_slot_attribute = type { i32 (%struct.pci_slot.0*, i8*)* }
%struct.pci_slot.0 = type opaque

@EIO = common dso_local global i32 0, align 4
@llvm.used = appending global [1 x i8*] [i8* bitcast (i32 (%struct.kobject*, %struct.attribute*, i8*)* @pci_slot_attr_show to i8*)], section "llvm.metadata"

; Function Attrs: noinline nounwind optnone uwtable
define internal i32 @pci_slot_attr_show(%struct.kobject* %0, %struct.attribute* %1, i8* %2) #0 {
  %4 = alloca %struct.kobject*, align 8
  %5 = alloca %struct.attribute*, align 8
  %6 = alloca i8*, align 8
  %7 = alloca %struct.pci_slot*, align 8
  %8 = alloca %struct.pci_slot_attribute*, align 8
  store %struct.kobject* %0, %struct.kobject** %4, align 8
  store %struct.attribute* %1, %struct.attribute** %5, align 8
  store i8* %2, i8** %6, align 8
  %9 = load %struct.kobject*, %struct.kobject** %4, align 8
  %10 = call %struct.pci_slot* @to_pci_slot(%struct.kobject* %9)
  store %struct.pci_slot* %10, %struct.pci_slot** %7, align 8
  %11 = load %struct.attribute*, %struct.attribute** %5, align 8
  %12 = call %struct.pci_slot_attribute* @to_pci_slot_attr(%struct.attribute* %11)
  store %struct.pci_slot_attribute* %12, %struct.pci_slot_attribute** %8, align 8
  %13 = load %struct.pci_slot_attribute*, %struct.pci_slot_attribute** %8, align 8
  %14 = getelementptr inbounds %struct.pci_slot_attribute, %struct.pci_slot_attribute* %13, i32 0, i32 0
  %15 = load i32 (%struct.pci_slot.0*, i8*)*, i32 (%struct.pci_slot.0*, i8*)** %14, align 8
  %16 = icmp ne i32 (%struct.pci_slot.0*, i8*)* %15, null
  br i1 %16, label %17, label %25

17:                                               ; preds = %3
  %18 = load %struct.pci_slot_attribute*, %struct.pci_slot_attribute** %8, align 8
  %19 = getelementptr inbounds %struct.pci_slot_attribute, %struct.pci_slot_attribute* %18, i32 0, i32 0
  %20 = load i32 (%struct.pci_slot.0*, i8*)*, i32 (%struct.pci_slot.0*, i8*)** %19, align 8
  %21 = load %struct.pci_slot*, %struct.pci_slot** %7, align 8
  %22 = bitcast %struct.pci_slot* %21 to %struct.pci_slot.0*
  %23 = load i8*, i8** %6, align 8
  %24 = call i32 %20(%struct.pci_slot.0* %22, i8* %23)
  br label %28

25:                                               ; preds = %3
  %26 = load i32, i32* @EIO, align 4
  %27 = sub nsw i32 0, %26
  br label %28

28:                                               ; preds = %25, %17
  %29 = phi i32 [ %24, %17 ], [ %27, %25 ]
  ret i32 %29
}

declare dso_local %struct.pci_slot* @to_pci_slot(%struct.kobject*) #1

declare dso_local %struct.pci_slot_attribute* @to_pci_slot_attr(%struct.attribute*) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
